@@ -9,6 +9,8 @@ CHANGES IN CUPS V1.4.7
 	  STR #3755, STR #3769, STR #3783)
 	- Configure script fixes (STR #3659, STR #3691)
 	- Compilation fixes (STR #3718, STR #3771, STR #3774)
+	- The network backends no longer try to collect SNMP supply and status
+	  information for raw queues (STR #3809)
 	- The DBUS notifier did not report job state changes (STR #3805)
 	- The scheduler did not always report that the "normal" print-quality
 	  value was supported (STR #3803)
